--- a/study/src/main/resources/static/css/board/board-list.css
+++ b/study/src/main/resources/static/css/board/board-list.css
@@ -9,7 +9,14 @@
 	width: 1000px;
 }
 
+.board-list > button {
+	position: absolute;
+	bottom: -30px;
+	right: 93px;
+}
+
 .board-list {
+	position: relative;
 	display : flex;
 	justify-content: center;
 	align-items: center;
