--- a/study/src/main/resources/static/css/board/board-update.css
+++ b/study/src/main/resources/static/css/board/board-update.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+* {
+	box-sizing: border-box;
+}
+
 #container {
 	display : flex;
 	flex-direction: column;
@@ -11,6 +15,7 @@
 
 .board-list {
 	display : flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	width: 100%;
@@ -50,22 +55,18 @@ td {
 	width: 400px;
 }
 
-.option-buttons {
-	display: flex;
-	justify-content: flex-end;
-	margin-top: 10px;
-	width: 50%;
+.input-items {
+	border: none;
+	outline: none;
+	padding: 10px;
+	width: 100%;
 }
 
-.option-buttons button:last-child {
-	margin-left: 10px;
+.textarea-item {
+	border: none;
+	outline: none;
+	padding: 10px;
+	resize: none;
+	width: 100%;
+	height: 500px;
 }
-
-
-
-
-
-
-
-
-
