--- a/todolist/src/main/resources/templates/todolist/signin.html
+++ b/todolist/src/main/resources/templates/todolist/signin.html
@@ -29,7 +29,9 @@
 	                    </div>
 	                </div>
 	                <div class="buttons-box">
-	                    <button type="submit" class="signin-btn">로그인</button>
+	                    <button type="button" class="signin-btn">로그인</button>
+	                    <a class="naver-login" href="/oauth2/authorization/naver">네이버 로그인</a>
+	                    <a class="kakao-login" href="/oauth2/authorization/kakao">카카오 로그인</a>
 	                    <button type="button" class="signup-btn">회원가입</button>
 	                </div>
                 </form>
