--- a/todolist/src/main/resources/templates/todolist/todolist.html
+++ b/todolist/src/main/resources/templates/todolist/todolist.html
@@ -13,7 +13,7 @@
 	<div id="container">
 		<div class="mt-container">
 			<div class="title-box">
-				<h1>To Do List</h1>
+				<h1 class="title">To Do List</h1>
 			</div>
 			<div class="add-list">
 				<i class="fa-solid fa-square-plus"></i>
@@ -23,9 +23,8 @@
 		<div class="list-content-box">
 			<ul class="list-table">
 			</ul>
-
 		</div>
-
+		<button type="submit" class="logout-btn">로그아웃</button>
 	</div>
 	<script src="/static/js/todolist.js"></script>
 </body>
