--- a/todolist/src/main/resources/templates/auth/signup.html
+++ b/todolist/src/main/resources/templates/auth/signup.html
@@ -22,6 +22,10 @@
                         <span>이름</span>
                         <input type="text" placeholder="Name">
                     </div>
+                    <div class="input-email-box">
+                        <span>이메일</span>
+                        <input type="text" placeholder="Email">
+                    </div>
                     <div class="input-id-box">
                         <span>아이디</span>
                         <input type="text" placeholder="ID">
