--- a/todolist/src/main/resources/static/css/signin.css
+++ b/todolist/src/main/resources/static/css/signin.css
@@ -1,6 +1,6 @@
 .login-box {
-    width: 500px;
-    height: 400px;
+    width: 600px;
+    height: 450px;
     border: 1px solid black;
 }
 
@@ -28,7 +28,7 @@ h1 {
     width: 100%;
     height: 80px;
     background-color: white;
-    font-size: 35px;
+    font-size: 50px;
     text-align: center;
     line-height: 80px;
 }
@@ -52,9 +52,15 @@ input {
 .buttons-box {
     display: flex;
     justify-content: space-around;
+    margin-top: 10px;
 }
 
-.naver-login {
+form {
+	margin-top: 30px;
+}
+
+.naver-login,
+.kakao-login {
 	width: 140px;
     background-color: rgba(20, 85, 171, 0.2);
     border-radius: 4px;
