--- a/todolist/src/main/resources/static/css/signup.css
+++ b/todolist/src/main/resources/static/css/signup.css
@@ -28,12 +28,13 @@ h1 {
     width: 100%;
     height: 80px;
     background-color: white;
-    font-size: 35px;
+    font-size: 50px;
     text-align: center;
     line-height: 80px;
 }
 
 .input-id-box,
+.input-email-box,
 .input-password-box,
 .input-name-box {
     display: flex;
