--- a/todolist/src/main/resources/templates/auth/signin.html
+++ b/todolist/src/main/resources/templates/auth/signin.html
@@ -17,7 +17,7 @@
                 <div class="title-box">
                     <h1>To Do List</h1>
                 </div>
-                <form action="/todo/signin" method="post">
+                <form action="/auth/todo/signin" method="post">
 	                <div class="login-form">
 	                    <div class="input-id-box">
 	                        <span>아이디</span>
